add bearer token requirement to swagger - gi
